login align fixed

--- a/src/components/NavbarSite.css
+++ b/src/components/NavbarSite.css
@@ -65,7 +65,6 @@ a {
   color: var(--color-white);
 }
 .login-container {
-  padding: 1.5rem;
   position: absolute;
   right: 1.5rem;
   display: flex;
